--- a/src/Pages/WixCustomer/WixCustomer.css
+++ b/src/Pages/WixCustomer/WixCustomer.css
@@ -1,22 +1,12 @@
 main {
-  /* margin-top: 10vh; */
-  /* background-color: #6f83f5; */
   transform: skewY(-6deg);
   box-shadow: 2px 2px 10px 1px black;
   position: relative;
 }
 
-
 .WixCustomer__background {
   width: 100%;
   padding-bottom: 100px;
-}
-.{
-  color: rgb(0, 0, 0);
-  text-align: center !important;
-  font-size: 40px;      
-  font-weight: bold;
-  letter-spacing: .1em;
 }
 
 .WixCustomer__h1{
@@ -26,16 +16,21 @@ main {
   margin: 0px 20px;
   font-weight: bold;
   letter-spacing: .1em;
-  font-family: 'Lato', sans-serif;
-    }
+  padding-bottom: 8%;
+}
+
+.WixCustomer__row__1{
+  justify-content: space-around;
+}
 
     .WixCustomer__row__2{
   justify-content: space-around;
   }
 
-  .WixCustomer__row__1{
-    justify-content: space-around;
+  .WixCustomer__row__3{
+  justify-content: space-between;
   }
+
 
   .wix__logo{
     max-width: 30%;
@@ -55,19 +50,58 @@ main {
   margin-bottom: 41px;
 }
 
+#wix_button{
+  background-color: rgb(168, 148, 32);
+  color: white;
+  border-radius: 35px;
+  padding: 10px;
+  width: 190px;
+  font-size: 20px;
+  font-weight: bold;
+  -webkit-transition: .3s ease-in-out;
+  transition: .5s ease-in-out;
+   }
+   #wix_button:hover{
+   color: rgb(168, 148, 32);
+   background-color: white;
+    border-radius: 35px;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+     }
+  
 
 
 
 
 
-
-
-
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 500px) {
  
+  .wix__logo{
+    max-width: 60%;
+    padding-bottom:3%;
+  }
 
-}
+  .WixCustomer__h1{
+    color: #000;
+    text-align: center !important;
+    font-size: 20px;      
+    margin: 0px 20px;
+    font-weight: bold;
+    letter-spacing: .1em;
+    padding-bottom: 8%;
+  }
 
-@media screen and (max-width: 768px) {
- 
+  #wix_button{
+    background-color: rgb(168, 148, 32);
+    color: white;
+    border-radius: 35px;
+    padding: 10px;
+
+    width: 120px;
+    font-size: 15px;
+    font-weight: bold;
+    -webkit-transition: .3s ease-in-out;
+    transition: .5s ease-in-out;
+  }
 }
